Avoid problems with mac-built tar file
BSD tar includes things that GNU tar complains about by default:

```
tar: Ignoring unknown extended header keyword `SCHILY.ino'
tar: Ignoring unknown extended header keyword `SCHILY.nlink'
tar: Ignoring unknown extended header keyword `SCHILY.dev'
```

--- a/build
+++ b/build
@@ -31,7 +31,7 @@ while read url ; do
   mkdir -p "$status" "$scratch" "$result"
 
   case "$file" in
-    *.tar.gz) extract=(tar xf "$file" -C "$scratch") ;;
+    *.tar.gz) extract=(tar xf "$file" -C "$scratch" --warning=no-unknown-keyword) ;;
     *) error EINVAL Unrecognized type: ".${file#*.}" ;;
   esac
 
